--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -25,3 +25,10 @@
 .status-bar__column.fa-battery-full{
     margin: 0px 5px;
 }
+.status-bar-index{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+}
