--- a/css/common-file/screens/more.css
+++ b/css/common-file/screens/more.css
@@ -26,6 +26,7 @@
 
 .more-suggestions__icons{
     display: flex;
+    justify-content: space-between;
 }
 .more-suggestions__icon:hover{
     animation: moresuggestionslarger 0.5s ease-in-out;
