--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,28 @@
-@import "reset.css";
-@import "variables.css";
+@import "common-file/reset.css";
+@import "common-file/variables.css";
 
 /*components*/
-@import "components/status-bar.css";
-@import "components/nav-bar.css";
-@import "components/screen-header.css";
-@import "components/user-components.css";
-@import "components/badge.css";
-@import "components/icon-row.css";
-@import "components/alt-screen-header.css";
-@import "components/no-mobile.css";
+@import "common-file/components/status-bar.css";
+@import "common-file/components/nav-bar.css";
+@import "common-file/components/screen-header.css";
+@import "common-file/components/user-components.css";
+@import "common-file/components/badge.css";
+@import "common-file/components/icon-row.css";
+@import "common-file/components/alt-screen-header.css";
+
 /*screens*/
-@import "screens/login.css";
-@import "screens/friends.css";
-@import "screens/find.css";
-@import "screens/more.css";
-@import "screens/settings.css";
-@import "screens/chat.css";
+@import "common-file/screens/login.css";
+@import "common-file/screens/friends.css";
+@import "common-file/screens/find.css";
+@import "common-file/screens/more.css";
+@import "common-file/screens/settings.css";
+@import "common-file/screens/chat.css";
+
+/*mobile*/
+@import "mobile/mobile-splash.css";
+
+/*browser*/
+@import "browser/browser-splash.css"
 
 body{
     color: #2e363e;
