--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@
 @import "mobile/mobile-splash.css";
 
 /*browser*/
-@import "browser/browser-splash.css"
+@import "browser/browser-splash.css";
 
 body{
     color: #2e363e;
