--- a/css/common-file/components/alt-screen-header.css
+++ b/css/common-file/components/alt-screen-header.css
@@ -4,24 +4,24 @@
     display: flex;
     align-items: center;
 }
-.alt-header__title{
+.alt-header-title{
     font-size: 28px;
     font-weight: 600;
 }
-.alt-header__column{
+.alt-header-column{
     width: 33%;
 }
-.alt-header__column:first-child{
+.alt-header-column:first-child{
     margin-right: auto;
 }
-.alt-header__column:nth-child(2){
+.alt-header-column:nth-child(2){
     text-align: center;
 }
-.alt-header__column:last-child{
+.alt-header-column:last-child{
     margin-left: auto;
     display: flex;
     justify-content: flex-end;
 }
-.alt-header__column span:last-child{
+.alt-header-column span:last-child{
     margin-left: 15px;
 }
