--- a/css/common-file/components/icon-row.css
+++ b/css/common-file/components/icon-row.css
@@ -3,14 +3,14 @@
     justify-content: space-between;
 }
 
-.icon-row__icon{
+.icon-row-icon{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.icon-row__icon i {
+.icon-row-icon i {
     font-size: 35px;
 }
-.icon-row__icon span{
+.icon-row-icon span{
     margin-top: 18px;
 }
