--- a/css/common-file/components/nav-bar.css
+++ b/css/common-file/components/nav-bar.css
@@ -7,11 +7,11 @@
     width: 100%;
     box-sizing: border-box;
 }
-.nav__list{
+.nav-list{
     display: flex;
     justify-content: space-between;
 }
-.nav__link{
+.nav-link{
     color: #2e363e;
     position: relative;
 }
@@ -27,13 +27,13 @@
     }
 }
 
-.nav__notification{
+.nav-notification{
     position: absolute;
     right: -15px;
     top: -15px;
     animation:notificationAnimation 2s ease-in-out infinite;
 }
-.nav__reddot{
+.nav-reddot{
     width: 5px;
     height: 5px;
     border-radius: 50%;
@@ -51,16 +51,16 @@
     }
 }
 
-.nav__btn{
+.nav-btn{
     transform:translatey(50px);
     animation: appearBtnAnimation 0.3s ease-in-out forwards;
 }
-.nav__btn:nth-child(2){
+.nav-btn:nth-child(2){
     animation-delay: 0.3s;
 }
-.nav__btn:nth-child(3){
+.nav-btn:nth-child(3){
     animation-delay: 0.6s;
 }
-.nav__btn:last-child{
+.nav-btn:last-child{
     animation-delay: 0.9s;
 }
