--- a/css/common-file/components/status-bar.css
+++ b/css/common-file/components/status-bar.css
@@ -5,24 +5,24 @@
     width: 100%;
     box-sizing: border-box;
 }
-.status-bar__column{
+.status-bar-column{
     width: 33%;
     padding: 5px 3px;
 }
 
-.status-bar__column:first-child span{
+.status-bar-column:first-child span{
   margin-right: 5px;
 }
-.status-bar__column:nth-child(2) {
+.status-bar-column:nth-child(2) {
     display: flex;
     justify-content: center;
 }
-.status-bar__column:last-child{
+.status-bar-column:last-child{
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-.status-bar__column.fa-battery-full{
+.status-bar-column.fa-battery-full{
     margin: 0px 5px;
 }
 .status-bar-index{
