--- a/css/common-file/components/user-components.css
+++ b/css/common-file/components/user-components.css
@@ -3,50 +3,50 @@
     margin-bottom: 15px;
 }
 .user-component,
-.user-component__column:first-child{
+.user-component-column:first-child{
     display:flex;
     align-items: center;
 }
-.user-component__avartar{
+.user-component-avartar{
     width: 70px;
     height: 70px;
     border-radius: 25px;
     margin-right: 20px;
 }
-.user-component__title{
+.user-component-title{
     font-weight: 600;
     font-size: 22px;
 }
-.user-component__subtitle{
+.user-component-subtitle{
     margin-top: 8px;
     font-size: 17px;
     color: rgba(0,0,0,0,5)
 }
-.user-component__avartar--xl{
+.user-component-avartar--xl{
     width: 80px;
     height: 80px;
     border-radius: 30px;
     margin-right: 20px;
 }
-.user-component__avartar--sm{
+.user-component-avartar--sm{
     width: 60px;
     height: 60px;
     border-radius: 25px;
 }
-.user-component__title--not-bold{
+.user-component-title--not-bold{
     font-weight: 400;
 }
-.user-component__column:last-child{
+.user-component-column:last-child{
     color: rgba(0,0,0,0.4);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
-.user-component__time{
+.user-component-time{
     margin-bottom: 10px;
     display: block;
 }
-.user-component__text 
+.user-component-text 
 .fa-circle-exclamation{
     color: tomato;
 }
