--- a/css/common-file/screens/login.css
+++ b/css/common-file/screens/login.css
@@ -6,11 +6,11 @@
     align-items: center;
     font-weight: 600;
  }
- .welcome-header__title{
+ .welcome-header-title{
      margin-bottom: 20px;
      font-size: 25px;
  }
- .welcome-header__text{
+ .welcome-header-text{
      width: 60%;
      opacity: 0.7;
      margin-bottom: 90px;
