--- a/css/common-file/screens/more.css
+++ b/css/common-file/screens/more.css
@@ -7,7 +7,7 @@
     border-top: var(--main-border);
     padding-top: 40px;
 }
-.more-suggestions__title{
+.more-suggestions-title{
     margin-bottom: 30px;
 }
 
@@ -24,20 +24,20 @@
     }
 }
 
-.more-suggestions__icons{
+.more-suggestions-icons{
     display: flex;
     justify-content: space-between;
 }
-.more-suggestions__icon:hover{
+.more-suggestions-icon:hover{
     animation: moresuggestionslarger 0.5s ease-in-out;
 }
-.more-suggestions__icon{
+.more-suggestions-icon{
     margin-right: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.more-suggestions__icon-image{
+.more-suggestions-icon-image{
     width: 60px;
     height: 60px;
     background-color: var(--yellow);
@@ -47,7 +47,7 @@
     align-items: center;
     margin-bottom: 10px;
 }
-.more-suggestions__icon-image i{
+.more-suggestions-icon-image i{
     font-size: 32px;
     color: white;
 }
