--- a/css/common-file/screens/settings.css
+++ b/css/common-file/screens/settings.css
@@ -30,6 +30,6 @@
 .settings-setting:nth-child(5){
     margin-left: -4px;
 }
-.settings__setting-column:last-child{
+.settings-setting-column:last-child{
     opacity: 0.7;
 }
